# allegro

./: .env.example  .gitignore  CLAUDE.md  README.md  allegro.pipeline.local.yaml  allegro.pipeline.yaml  phase1-kitchen-test.md  pyproject.toml
.claude/: launch.json
allegro/: __init__.py  bot.py  recipe.py  registry.py
allegro/adapters/: __init__.py  llm.py  stt.py  tts.py
allegro/core/: __init__.py  coach.py  intents.py  safety.py  state.py  timers.py
allegro/editor/: __init__.py  index.html  server.py
allegro/obs/: __init__.py  turnlog.py
docs/: billing.md  cost-model.md  editor-spec.md  glossary.md  phase0-baseline.md  runbook-local.md  spike-plan.md  walkthrough.md
tests/: test_billing.py  test_core.py
