[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "allegro"
version = "0.0.0"
description = "Hands-free voice cooking coach — Phase 0 baseline spike"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
# The live pipeline (not needed to run the core tests).
live = [
    # whisper + kokoro give the local, $0 Phase 0a legs (faster-whisper STT, Kokoro TTS).
    "pipecat-ai[deepgram,cartesia,silero,webrtc,whisper,kokoro]>=1.4",
    # macOS: Pipecat's Whisper STT imports mlx at module load, so it's required even for
    # the faster-whisper (CPU) path. Verified against pipecat-ai 1.4.0 on Apple Silicon.
    "pipecat-ai[mlx-whisper]; sys_platform == 'darwin'",
    "pipecat-ai-small-webrtc-prebuilt",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["allegro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
