[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "allegro"
version = "0.0.0"
description = "Hands-free voice cooking coach — Phase 0 baseline spike"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
]

[project.optional-dependencies]
# The live pipeline (not needed to run the core tests).
live = [
    # runner = the dev server (POST /start, /api/offer, prebuilt /client UI) our bot()
    # runs under. whisper + kokoro are the local, $0 Phase 0a legs.
    "pipecat-ai[deepgram,cartesia,silero,webrtc,whisper,kokoro,runner]>=1.4",
    # macOS: Pipecat's Whisper STT imports mlx at module load, so it's required even for
    # the faster-whisper (CPU) path. Verified against pipecat-ai 1.4.0 on Apple Silicon.
    "pipecat-ai[mlx-whisper]; sys_platform == 'darwin'",
    "anthropic>=0.40",
]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
include = ["allegro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
